hphp/test/slow/like_types/like_casts_wrong_class_reify2.php.expectf

Fatal error: Uncaught exception 'TypeAssertionException' with message 'Expected %|{C<string>|C}, got C<int>' in %s/hphp/test/slow/like_types/like_casts_wrong_class_reify2.php:8
Stack trace:
#0 {main}
